#13 authorization in the controller